# LLM-Powered-SQL-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
scripts/: run_cli.py
src/sql_agent/: __init__.py  agent.py  config.py  db.py  llm.py
src/sql_agent_gemini.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
